# MyNote

./: .gitignore  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
docs/: markdown-embedded-html-support.md  packaging-and-release.md  personal-knowledge-base-design.md  personal-knowledge-base-detailed-design.md  test.md  usage-help.md
scripts/: build-release.mjs  generate-updater-key.mjs  generate-updater-manifest.mjs  migrate-inline-tags.mjs  prepare-release-from-tag.mjs  publish-updater-to-github.mjs  publish-updater-to-gitlab.mjs  sync-version.mjs
src/: App.test.tsx  App.tsx  (+1 more)
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json  test_offset_verification.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/en.lproj/: InfoPlist.strings  Localizable.strings
src-tauri/resources/zh-Hans.lproj/: Localizable.strings
src-tauri/resources/zh_CN.lproj/: Localizable.strings
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: ai.rs  graph.rs  knowledge_base.rs  link.rs  mod.rs  note.rs  relation.rs  search.rs  summary.rs  tag.rs
src-tauri/src/domain/: ai.rs  graph.rs  knowledge_base.rs  link.rs  mod.rs  note.rs  relation.rs  search.rs  tag.rs
src-tauri/src/infrastructure/: db.rs  fs.rs  hash.rs  markdown.rs  mod.rs
src-tauri/src/services/: graph.rs  index.rs  knowledge_base.rs  markdown_beautify.rs  mod.rs  note.rs  notebook_visual.rs  relation.rs  summary.rs  summary_agent.rs  tag.rs  watcher.rs
src-tauri/src/services/ai/: mod.rs  orchestrator.rs  provider.rs  secret_store.rs  settings.rs
src-tauri/src/services/ai/providers/: anthropic.rs  mod.rs  openai_compatible.rs
(+220 files in other folders)
